--- a/INSTAPDD/viewer.html
+++ b/INSTAPDD/viewer.html
@@ -220,6 +220,15 @@ select {
   background: #00c853; /* verde selección */
   border-color: white;
 }
+.hidden-item img {
+  display: none !important;
+}
+
+.hidden-item .info-hover,
+.hidden-item .delete-btn,
+.hidden-item .edit-btn {
+  display: none !important;
+}
   
 </style>
 </head>
