--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
     <div class="apps">
    <a href="POSVTA4/TRANSFESPOS4.html"> TRANSFER DE RUTAS V4 </a>
   </div>
+  <div class="apps">
+   <a href="AJUSTEZAPATA/AJUZAPATA.html"> AJUSTE ZAPATA </a>
+  </div>
   <footer>
     Powered by <b>PROVSOFT</b>
   </footer>
